# nokey

./: .readthedocs.yaml  README.md  apis.txt  pyproject.toml  requirements.txt  version.py
docs/: conf.py  index.rst  nokey.activities.rst  nokey.art_and_images.rst  nokey.calendar.rst  nokey.developer_tools.rst  nokey.education.rst  nokey.finance_and_crypto.rst  nokey.games.rst  nokey.geolocation.rst  nokey.health.rst  nokey.helperFuncs.rst  nokey.rst  nokey.science_and_nature.rst  nokey.spaceflight.rst  requirements.txt
docs/_autosummary/: nokey.activities.rst  nokey.animals.rst  nokey.art_and_images.rst  nokey.books_and_literature.rst  nokey.calendar.rst  nokey.country_info.rst  nokey.developer_tools.rst  nokey.education.rst  nokey.finance_and_crypto.rst  nokey.food.rst  nokey.games.rst  nokey.geolocation.rst  nokey.government.rst  nokey.health.rst  nokey.inspiration.rst  nokey.jokes.rst  nokey.language.rst  nokey.random.rst  nokey.rst  nokey.science_and_nature.rst  nokey.spaceflight.rst  nokey.tv_and_film.rst  nokey.weather.rst
nokey.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
nokey/activities/: bored_api.py
nokey/animals/: dog_api.py
nokey/art_and_images/: artic.py  lorem_picsum.py
nokey/books_and_literature/: gutendex.py  stephen_king.py
nokey/calendar/: nager_date.py
nokey/country_info/: rest_country.py
nokey/developer_tools/: apis_guru.py  filter_lists.py  microlink.py  url_haus.py  url_shortener.py
nokey/education/: university_domains_and_names.py  university_names_and_domains.py
nokey/finance/: wall_street_bets.py
nokey/finance_and_crypto/: coinmap.py  exchange_api.py  wall_street_bets.py  wallstreet_bets.py
nokey/food/: fruityvice.py
nokey/games/: free_to_game.py  open_trivia_db.py  shadify.py
nokey/geolocation/: ip_api.py  zippopotamus.py
nokey/government/: federal_register.py  usa_spending.py
nokey/health/: open_disease.py
nokey/helperFuncs/: get_api_list.py  make_request.py  nokey_apis.py  throttler.py
nokey/inspiration/: dictum.py
(+135 files in other folders)
