[project]
name = "nokey"
version = "0.3.2"
authors = [
  { name="Spyder Rex", email="billyjohnsonauthor@gmail.com" },
]
description = "A python package for accessing APIs that require no key."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/SpyderRex/nokey"
Issues = "https://github.com/Spyder/nokey/issues"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.31.0"
xmltodict = "^0.13.0"

